infra_test_input/terraform/security.tf
resource "aws_security_group" "web" {

  name = "web"

  ingress {

    from_port = 22

    to_port = 22

    protocol = "tcp"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }

  ingress {

    from_port = 3389

    to_port = 3389

    protocol = "tcp"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }
}
